--- a/now.json
+++ b/now.json
@@ -19,8 +19,12 @@
   ],
   "routes": [
     {
+      "src": "/",
+      "dest": "/src/index.js" 
+    },
+    {
       "src": "/(.*)",
-       "dest": "/index.js"
+      "dest": "/"
     }
   ]
 }
